--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "netlify dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "preview:netlify": "npm run build && netlify dev --live",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "deploy": "npm run build && netlify deploy --prod"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -38,6 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "netlify-cli": "^22.3.0",
     "vite": "^5.4.11"
   }
 }
